--- a/.atomist/manifest.yml
+++ b/.atomist/manifest.yml
@@ -1,5 +1,5 @@
-group: sample
-artifact: com-liferay-rugs
+group: com-liferay-rugs
+artifact: service-builder
 version: 0.1.0-SNAPSHOT
 
 requires: "[0.9.0,1.0.0)"
